# Solux-app-simulator

./: Anchor.toml  App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
components/: CollateralManager.tsx  CreditCard.tsx  SecurityView.tsx  Sidebar.tsx  SolanaWallet.tsx  StatsGrid.tsx  TransactionList.tsx
programs/solux-vault/: Cargo.toml
programs/solux-vault/src/: lib.rs
server/: index.js
services/: collateralService.ts  lithicService.ts  solanaVaultService.t
